<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="java.lang.Double"/>
        <variable
            name="city"
            type="com.virex.ewtest.entity.City" />
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_name"
            android:inputType=""
            android:singleLine="true"
            android:text="@{city.name}"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_type" />

            <Spinner
                android:id="@+id/choise_city_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:prompt="@string/city_type"
                android:spinnerMode="dialog"
                android:entries="@array/city_type_entries"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/january"
                />

            <EditText
                android:id="@+id/janTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.janTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/febrary" />
            <EditText
                android:id="@+id/febTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.febTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/march" />
            <EditText
                android:id="@+id/marTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.marTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/april" />
            <EditText
                android:id="@+id/aprTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.aprTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/may" />
            <EditText
                android:id="@+id/mayTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.mayTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jun" />
            <EditText
                android:id="@+id/junTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.junTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/july" />
            <EditText
                android:id="@+id/julTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.julTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/august" />
            <EditText
                android:id="@+id/augTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.augTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/september" />
            <EditText
                android:id="@+id/sepTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.sepTemp)}"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/october" />
            <EditText
                android:id="@+id/octTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.octTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/november" />
            <EditText
                android:id="@+id/nowTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.nowTemp)}"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/december" />
            <EditText
                android:id="@+id/decTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_temperature"
                android:inputType=""
                android:singleLine="true"
                android:text="@{String.valueOf(city.decTemp)}"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>